Fix: ESPN uses NY/SA instead of NYK/SAS

--- a/index.html
+++ b/index.html
@@ -282,16 +282,16 @@
             { name: '한신', teamId: 'DEN', team: 'Denver Nuggets', teamKr: '덴버 너게츠', conf: 'West' },
             { name: '동수', teamId: 'CLE', team: 'Cleveland Cavaliers', teamKr: '클리블랜드 캐벌리어스', conf: 'East' },
             { name: '승우', teamId: 'LAL', team: 'Los Angeles Lakers', teamKr: 'LA 레이커스', conf: 'West' },
-            { name: '한근', teamId: 'NYK', team: 'New York Knicks', teamKr: '뉴욕 닉스', conf: 'East' },
+            { name: '한근', teamId: 'NY', team: 'New York Knicks', teamKr: '뉴욕 닉스', conf: 'East' },
             { name: '에스겔', teamId: 'HOU', team: 'Houston Rockets', teamKr: '휴스턴 로케츠', conf: 'West' },
-            { name: '지혁', teamId: 'SAS', team: 'San Antonio Spurs', teamKr: '샌안토니오 스퍼스', conf: 'West' },
+            { name: '지혁', teamId: 'SA', team: 'San Antonio Spurs', teamKr: '샌안토니오 스퍼스', conf: 'West' },
             { name: '성욱', teamId: 'OKC', team: 'Oklahoma City Thunder', teamKr: 'OKC 썬더', conf: 'West' },
         ];
 
         // 팀 이모지
         const teamEmoji = {
-            'DEN': '⛏️', 'CLE': '⚔️', 'LAL': '💜', 'NYK': '🗽', 
-            'HOU': '🚀', 'SAS': '🤠', 'OKC': '⚡'
+            'DEN': '⛏️', 'CLE': '⚔️', 'LAL': '💜', 'NY': '🗽', 
+            'HOU': '🚀', 'SA': '🤠', 'OKC': '⚡'
         };
 
         // ESPN API에서 스탠딩 가져오기
