Update title: 문정늪 파이널우승 내기 with NBA logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🏀 NBA 우승 내기 트래커</title>
+    <title>🏆 문정늪 파이널우승 내기</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
     <style>
@@ -251,7 +251,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🏀 NBA 우승 내기</h1>
+            <h1><img src="https://cdn.nba.com/logos/leagues/logo-nba.svg" alt="NBA" style="height: 1.2em; vertical-align: middle; margin-right: 8px;">문정늪 파이널우승 내기 🏆</h1>
             <p class="subtitle">누가 플레이오프에서 가장 멀리 갈까?</p>
             <div class="status-badge" id="season-status">정규시즌 진행 중</div>
         </header>
