--- a/index.html
+++ b/index.html
@@ -275,14 +275,23 @@
         }
 
         async function fetchOdds() {
-            try {
-                const response = await fetch('https://sports.core.api.espn.com/v2/sports/basketball/nba/seasons/2026/futures/2564');
-                const data = await response.json();
-                return parseESPNOdds(data);
-            } catch (error) {
-                console.error('Odds API failed:', error);
-                return {};
+            // ESPN futures API - try multiple seasons
+            const seasons = [2025, 2026, 2024];
+            for (const season of seasons) {
+                try {
+                    const response = await fetch(`https://sports.core.api.espn.com/v2/sports/basketball/nba/seasons/${season}/futures/2564`);
+                    if (!response.ok) continue;
+                    const data = await response.json();
+                    if (data.futures && data.futures[0] && data.futures[0].books) {
+                        console.log(`Odds loaded from season ${season}`);
+                        return parseESPNOdds(data);
+                    }
+                } catch (error) {
+                    continue;
+                }
             }
+            console.warn('Odds API unavailable');
+            return null;
         }
 
         function parseESPNStandings(data) {
@@ -362,8 +371,8 @@
                 return a.seed - b.seed;
             });
 
-            // 오즈 기준 정렬
-            const byOdds = [...participantsWithData].sort((a, b) => oddsToNumber(a.odds) - oddsToNumber(b.odds));
+            // 오즈 기준 정렬 (오즈 있을 때만)
+            const byOdds = odds ? [...participantsWithData].sort((a, b) => oddsToNumber(a.odds) - oddsToNumber(b.odds)) : [];
 
             const leader = bySeed[0];
             const tiedLeaders = bySeed.filter(p => p.projected.round === leader.projected.round);
@@ -413,21 +422,32 @@
             }).join('');
 
             // 오즈 래더
-            const oddsLadderHTML = byOdds.map((p, idx) => {
-                const rankClass = idx === 0 ? 'r1' : idx === 1 ? 'r2' : idx === 2 ? 'r3' : '';
-                return `
-                    <div class="ladder-item">
-                        <div class="ladder-rank ${rankClass}">${idx + 1}</div>
-                        <div class="ladder-info">
-                            <h4>${p.name}</h4>
-                            <div class="team">${teamEmoji[p.teamId]} ${p.teamKr}</div>
-                        </div>
-                        <div class="ladder-value">
-                            <div class="main odds">${p.odds || 'N/A'}</div>
-                        </div>
+            let oddsLadderHTML;
+            if (odds === null) {
+                oddsLadderHTML = `
+                    <div style="text-align: center; padding: 40px 20px; color: var(--text-dim);">
+                        <div style="font-size: 2rem; margin-bottom: 10px;">📡</div>
+                        <div>ESPN 배당률 API 일시 불가</div>
+                        <div style="font-size: 0.8rem; margin-top: 5px;">나중에 다시 확인해주세요</div>
                     </div>
                 `;
-            }).join('');
+            } else {
+                oddsLadderHTML = byOdds.map((p, idx) => {
+                    const rankClass = idx === 0 ? 'r1' : idx === 1 ? 'r2' : idx === 2 ? 'r3' : '';
+                    return `
+                        <div class="ladder-item">
+                            <div class="ladder-rank ${rankClass}">${idx + 1}</div>
+                            <div class="ladder-info">
+                                <h4>${p.name}</h4>
+                                <div class="team">${teamEmoji[p.teamId]} ${p.teamKr}</div>
+                            </div>
+                            <div class="ladder-value">
+                                <div class="main odds">${p.odds || 'N/A'}</div>
+                            </div>
+                        </div>
+                    `;
+                }).join('');
+            }
 
             document.getElementById('content').innerHTML = `
                 ${leaderHTML}
