Fix ESPN logo URL

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         <div class="ladder-title">
                             🎰 우승 배당률 순위
                             <span class="source">
-                                <img src="https://a.espncdn.com/combiner/i?img=/i/espn/networks/espn_red.png&w=60" alt="ESPN" style="height: 0.9em; vertical-align: middle;">
+                                <img src="https://a.espncdn.com/i/espn/misc_logos/500/espn.png" alt="ESPN" style="height: 1.1em; vertical-align: middle;">
                             </span>
                         </div>
                         <div class="ladder-list">${oddsLadderHTML}</div>
@@ -472,7 +472,7 @@
             `;
 
             document.getElementById('update-time').innerHTML = 
-                `마지막 업데이트: ${new Date().toLocaleString('ko-KR')}<br>📡 데이터 출처: <a href="https://www.espn.com/nba/" target="_blank"><img src="https://a.espncdn.com/combiner/i?img=/i/espn/networks/espn_red.png&w=80" alt="ESPN" style="height: 0.9em; vertical-align: middle;"></a>`;
+                `마지막 업데이트: ${new Date().toLocaleString('ko-KR')}<br>📡 데이터 출처: <a href="https://www.espn.com/nba/" target="_blank"><img src="https://a.espncdn.com/i/espn/misc_logos/500/espn.png" alt="ESPN" style="height: 1.1em; vertical-align: middle;"></a>`;
         }
 
         async function init() {
