📐 Move round badge inline with record

--- a/index.html
+++ b/index.html
@@ -456,8 +456,7 @@
                         </div>
                         <div class="ladder-value">
                             <div class="main">${p.conference} #${p.seed}</div>
-                            <div class="sub">${p.wins}-${p.losses}</div>
-                            <span class="round-badge ${p.projected.class}" style="font-size: 0.6rem; margin-top: 4px;">${p.projected.label}</span>
+                            <div class="sub">${p.wins}-${p.losses} <span class="round-badge ${p.projected.class}" style="font-size: 0.6rem; margin-left: 6px;">${p.projected.label}</span></div>
                         </div>
                     </div>
                 `;
