--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
             { name: '승우', teamId: 'LAL', espnId: '13', teamKr: '레이커스', conf: 'West' },
             { name: '한근', teamId: 'NY', espnId: '18', teamKr: '뉴욕', conf: 'East' },
             { name: '에스겔', teamId: 'HOU', espnId: '10', teamKr: '휴스턴', conf: 'West' },
-            { name: '지혁', teamId: 'SA', espnId: '24', teamKr: '샌안토니오', conf: 'West' },
-            { name: '성욱', teamId: 'OKC', espnId: '25', teamKr: 'OKC', conf: 'West' },
+            { name: '지혁', teamId: 'OKC', espnId: '25', teamKr: 'OKC', conf: 'West' },
+            { name: '성욱', teamId: 'GSW', espnId: '9', teamKr: '골든스테이트', conf: 'West' },
         ];
 
         const teamEmoji = {
             'DEN': '⛏️', 'CLE': '⚔️', 'LAL': '💜', 'NY': '🗽', 
-            'HOU': '🚀', 'SA': '🤠', 'OKC': '⚡'
+            'HOU': '🚀', 'OKC': '⚡', 'GSW': '💛'
         };
 
         async function fetchStandings() {
