🔧 Fix GSW → GS (ESPN abbreviation)

--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
             { name: '한근', teamId: 'NY', espnId: '18', teamKr: '뉴욕', conf: 'East' },
             { name: '에스겔', teamId: 'HOU', espnId: '10', teamKr: '휴스턴', conf: 'West' },
             { name: '지혁', teamId: 'OKC', espnId: '25', teamKr: 'OKC', conf: 'West' },
-            { name: '성욱', teamId: 'GSW', espnId: '9', teamKr: '골든스테이트', conf: 'West' },
+            { name: '성욱', teamId: 'GS', espnId: '9', teamKr: '골든스테이트', conf: 'West' },
         ];
 
         const teamEmoji = {
             'DEN': '⛏️', 'CLE': '⚔️', 'LAL': '💜', 'NY': '🗽', 
-            'HOU': '🚀', 'OKC': '⚡', 'GSW': '💛'
+            'HOU': '🚀', 'OKC': '⚡', 'GS': '💛'
         };
 
         async function fetchStandings() {
