🎨 Update emojis: GS→🌉 LAL→🏞️

--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
         ];
 
         const teamEmoji = {
-            'DEN': '⛏️', 'CLE': '⚔️', 'LAL': '💜', 'NY': '🗽', 
-            'HOU': '🚀', 'OKC': '⚡', 'GS': '💛'
+            'DEN': '⛏️', 'CLE': '⚔️', 'LAL': '🏞️', 'NY': '🗽', 
+            'HOU': '🚀', 'OKC': '⚡', 'GS': '🌉'
         };
 
         async function fetchStandings() {
