💜 LAL emoji back to purple heart

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         ];
 
         const teamEmoji = {
-            'DEN': '⛏️', 'CLE': '⚔️', 'LAL': '🏞️', 'NY': '🗽', 
+            'DEN': '⛏️', 'CLE': '⚔️', 'LAL': '💜', 'NY': '🗽', 
             'HOU': '🚀', 'OKC': '⚡', 'GS': '🌉'
         };
 
